#226 - Dark Mode Bug Fixes

--- a/src/app/shared/components/df-side-nav/df-side-nav.component.scss
+++ b/src/app/shared/components/df-side-nav/df-side-nav.component.scss
@@ -4,7 +4,7 @@ $df-purple-palette: mat.define-palette(theme.$df-purple-palette);
 $red-palette: mat.define-palette(mat.$red-palette);
 
 .logo {
-  height: 30px;
+  height: 40px;
   cursor: pointer;
 }
 
@@ -15,9 +15,49 @@ $red-palette: mat.define-palette(mat.$red-palette);
   flex-direction: column;
 }
 
-.tool-bar {
-  background-color: mat.get-color-from-palette($df-purple-palette, 100);
-  min-height: 64px;
+.mat-toolbar {
+  background-color: #f6f2fa;
+  padding: 16px;
+  min-height: 72px;
+  display: flex;
+  align-items: center;
+
+  .button-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    img {
+      margin-bottom: -4px;
+    }
+  }
+
+  .search-bar {
+    margin-left: 24px;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    flex: 1 1 auto;
+    border: 1px solid #ebe7ef;
+    border-radius: 50px;
+    background-color: #ebe7ef;
+    overflow: hidden;
+    width: 300px;
+    height: 50px;
+    font-size: 24px;
+  }
+  .search-input {
+    border: none;
+    background-color: #ebe7ef;
+    color: #47464f;
+    font-size: 20px;
+    &:focus {
+      outline: none;
+    }
+  }
+  .search-icon {
+    color: #47464f;
+    padding-left: 14px;
+  }
 }
 
 .search-btn {
@@ -43,10 +83,10 @@ $red-palette: mat.define-palette(mat.$red-palette);
 }
 
 .sidenav-container {
-  background-color: mat.get-color-from-palette($df-purple-palette, 100);
+  background-color: #f6f2fa;
   flex: 1 1 auto;
   .sidenav {
-    background-color: mat.get-color-from-palette($df-purple-palette, 900);
+    background-color: #0f0761;
     min-width: 40%;
     border: none;
     transition: min-width 0.3s ease-out;
@@ -86,7 +126,7 @@ $red-palette: mat.define-palette(mat.$red-palette);
     }
     .logged-in & {
       min-width: 20%;
-      background-color: mat.get-color-from-palette($df-purple-palette, 100);
+      background-color: #f6f2fa;
     }
     .logged-in.small & {
       min-width: 40%;
@@ -96,60 +136,79 @@ $red-palette: mat.define-palette(mat.$red-palette);
       font-weight: 400;
       height: 48px;
       padding: 0 16px;
+      gap: 4px;
+      background: #f6f2fa;
     }
     ::ng-deep {
       .mat-expansion-panel-body {
         padding: 0 0 0 16px !important;
+        background: #f6f2fa;
       }
     }
     .nav-item {
-      background-color: mat.get-color-from-palette($df-purple-palette, 100);
+      // background-color: #f6f2fa;
       height: 48px;
       width: 100%;
       font-size: 1.6rem;
       font-weight: 400;
       border-radius: 0;
       justify-content: left;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      ::ng-deep .mat-mdc-button-touch-target {
+        background-color: #f6f2fa;
+      }
       &.active {
-        background-color: mat.get-color-from-palette($df-purple-palette, 200);
-        border-radius: 0px 50px 50px 0px;
+        ::ng-deep .mat-mdc-button-touch-target {
+          background-color: #e3dfff;
+          border-top-right-radius: 50px;
+          border-bottom-right-radius: 50px;
+        }
+        background-color: #e3dfff !important;
+        border-top-right-radius: 50px;
+        border-bottom-right-radius: 50px;
+        border-top-left-radius: 0;
         width: 95%;
       }
-    }
-    .expansion-panel {
-      background-color: mat.get-color-from-palette($df-purple-palette, 100);
+      .expansion-panel {
+        background-color: #f6f2fa;
+      }
     }
   }
   .sidenav-content {
-    background-color: white;
-    margin: 10px;
     display: flex;
     flex-direction: column;
     height: 100%;
-    border-radius: 20px;
+    padding: 8px 20px 24px;
+    background: #f6f2fa;
+    .content-wrapper {
+      padding: 2px;
+      border: 1px solid  #f6f2fa;
+      background-color: #f6f2fa;
+      border-radius: 6px !important;
+    }
     .banner {
       flex-shrink: 0;
       width: 100%;
-      padding-bottom: 60px;
-      background-color: white;
+      padding-bottom: 40px;
+      background-color: #fff;
       .page-header {
-        color: mat.get-color-from-palette($df-purple-palette, 1001);
         padding: 32px 16px 0 16px;
       }
     }
     .main {
-      // height: 100%;
       flex-grow: 1;
       &.no-error {
         .logged-in & {
-          margin: -60px 16px 0 16px;
-          padding: 16px 24px;
+          margin-top: -60px;
+          padding: 16px 20px;
           background-color: white;
         }
         .logged-in.small & {
           margin: 0;
           margin-top: -60px;
-          padding: 16px 16px 0 16px;
+          padding: 16px 20px;
         }
       }
     }
@@ -171,6 +230,9 @@ $red-palette: mat.define-palette(mat.$red-palette);
   .mat-expansion-panel-body {
     overflow-x: auto;
   }
+  .mat-expansion-panel {
+    background: #f6f2fa;
+  }
 }
 
 .license-expired {
@@ -185,9 +247,9 @@ $red-palette: mat.define-palette(mat.$red-palette);
   padding: 16px;
 }
 
-// ::ng-deep .parent-route > .mat-expansion-indicator::after {
-//   color: unset !important;
-// }
+.breadcrumb-link {
+  color: white;
+}
 
 .dark-theme {
   .tool-bar,
@@ -200,15 +262,51 @@ $red-palette: mat.define-palette(mat.$red-palette);
       1003
     ) !important;
   }
-  .nav-item {
-    &.active {
+
+    .parent-route {
       background-color: mat.get-color-from-palette(
         $df-purple-palette,
-        600
+        1003
       ) !important;
     }
+
+    .nav-item {
+      ::ng-deep .mat-mdc-button-touch-target {
+        background-color: mat.get-color-from-palette(
+          $df-purple-palette,
+          1003
+        ) !important;
+      }
+    }
+    &.active {
+      ::ng-deep .mat-mdc-button-touch-target {
+        background-color: #e3dfff;
+        border-top-right-radius: 50px;
+        border-bottom-right-radius: 50px;
+      }
+    }
+  
+  .nav-item {
+    &.active {
+      ::ng-deep .mat-mdc-button-touch-target {
+        background-color: mat.get-color-from-palette(
+          $df-purple-palette,
+          600
+        ) !important;
+      }
+      ::ng-deep .mdc-button__label > span {
+        background-color: mat.get-color-from-palette(
+          $df-purple-palette,
+          600
+        ) !important;
+      }
+    }
+
+    img {
+      filter: invert(1) !important;
+    
+    }
   }
-  .sidenav-content,
   .banner,
   .main {
     background-color: mat.get-color-from-palette(
@@ -219,5 +317,23 @@ $red-palette: mat.define-palette(mat.$red-palette);
     .page-header {
       color: mat.get-color-from-palette($df-purple-palette, 10) !important;
     }
+  }
+  .sidenav-content {
+    background-color: mat.get-color-from-palette(
+      $df-purple-palette,
+      1003
+    ) !important;
+    color: white;
+    .page-header {
+      color: mat.get-color-from-palette($df-purple-palette, 10) !important;
+    }
+  }
+
+  
+  .content-wrapper {
+    padding: 2px;
+    border: 1px solid  mat.get-color-from-palette($df-purple-palette, 1001) !important;
+    background-color: mat.get-color-from-palette($df-purple-palette, 1002) !important;
+    border-radius: 6px !important;
   }
 }
